turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: type mismatch;
 found   : Array[Int]
 required: Int
  setCouleurBrosse(colors(rule(etat)(couleur_actuelle)))
                                    ^Turmite:22: error: reassignment to val
  mvmt_suivant=rule(etat)(couleur_actuelle)(mvmt_suivant)
              ^Turmite:30: error: reassignment to val
  mvmt_suivant=rule(etat)(couleur_actuelle)(mvmt_suivant)
              ^Turmite:31: error: reassignment to val
  couleur_actuelle=rule(etat)(couleur_actuelle)
                  ^Turmite:32: error: reassignment to val
  etat=rule(etat)
      ^